--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <!-- Item 1 -->
             <div class="grid-item">
               <img
-                src="img/CascadaP.WEBP"
+                src="img/cascadaPailon.webp"
                 alt="Sitio Turístico 1"
                 class="item-image"
               />
