--- a/payment.html
+++ b/payment.html
@@ -1,42 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/payment.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/payment.css" />
     <title>Payment</title>
-</head>
-<body>
+  </head>
+  <body>
     <figure>
-        <img src="images/payment.jpg" alt="">
+      <img src="images/payment.jpg" alt="" />
     </figure>
     <div class="form-container">
-        <form action="#" class="credit-card-form">
-            <h2 class="form-title">Método de pago</h2>
-            
-            <div class="form-group">
-                <label for="card-name" class="form-label">Nombre en la tarjeta</label>
-                <input type="text" id="card-name" class="form-input" placeholder="Nombre completo" required>
-            </div>
+      <form action="#" class="credit-card-form">
+        <h2 class="form-title">Método de pago</h2>
 
-            <div class="form-group">
-                <label for="card-number" class="form-label">Número de tarjeta</label>
-                <input type="text" id="card-number" class="form-input" placeholder="0000 0000 0000 0000" maxlength="19" required>
-            </div>
+        <div class="form-group">
+          <label for="card-name" class="form-label">Nombre en la tarjeta</label>
+          <input
+            type="text"
+            id="card-name"
+            class="form-input"
+            placeholder="Nombre completo"
+            required
+          />
+        </div>
 
-            <div class="form-group">
-                <label for="expiry-date" class="form-label">Fecha de vencimiento</label>
-                <input type="text" placeholder="DD/AA" id="expiry-date" class="form-input" required>
-            </div>
+        <div class="form-group">
+          <label for="card-number" class="form-label">Número de tarjeta</label>
+          <input
+            type="text"
+            id="card-number"
+            class="form-input"
+            placeholder="0000 0000 0000 0000"
+            maxlength="19"
+            required
+          />
+        </div>
 
-            <div class="form-group">
-                <label for="cvv" class="form-label">CVV</label>
-                <input type="text" id="cvv" class="form-input" placeholder="123" maxlength="4" required>
-            </div>
+        <div class="form-group">
+          <label for="expiry-date" class="form-label"
+            >Fecha de vencimiento</label
+          >
+          <input
+            type="text"
+            placeholder="DD/AA"
+            id="expiry-date"
+            class="form-input"
+            required
+          />
+        </div>
 
-            <button type="submit" class="form-button">Enviar</button>
-        </form>
+        <div class="form-group">
+          <label for="cvv" class="form-label">CVV</label>
+          <input
+            type="text"
+            id="cvv"
+            class="form-input"
+            placeholder="123"
+            maxlength="4"
+            required
+          />
+        </div>
+
+        <button type="submit" class="form-button">Guardar</button>
+      </form>
     </div>
-    
-</body>
+  </body>
 </html>
