--- a/admin.html
+++ b/admin.html
@@ -14,7 +14,7 @@
           <img src="/img/Icono.png" alt="" class="logo" />
         </li>
         <li>
-          <a href="/signin.html">Salir</a>
+          <a href="/signin.html" id="signout-ancle">Salir</a>
         </li>
       </ul>
       <form class="form-itineraries">
