--- a/payment.html
+++ b/payment.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <figure>
-      <img src="images/payment.jpg" alt="" />
+      <img src="img/payment.jpg" alt="" />
     </figure>
     <div class="form-container">
       <form action="#" class="credit-card-form">
