update home interface

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TravelNow</title>
+    <link rel="shortcut icon" href="img/f" type="image/x-icon">
     <link rel="stylesheet" href="styles/index.css" />
     <!-- Archivo externo de CSS -->
   </head>
@@ -12,17 +13,16 @@
     <header class="header">
       <!-- Logo -->
       <div class="logo">
-        <img src="img/Icono.png" alt="Logo" />
-        <span>TravelNow</span>
+        <img src="img/logo.png" alt="Logo" />
       </div>
 
       <!-- Menú central -->
-      <ul class="menu">
+      <!-- <ul class="menu">
         <li class="menu-item">Registro</li>
         <li class="menu-item">Ver destinos</li>
         <li class="menu-item">Calificar destinos</li>
         <li class="menu-item">Viajes</li>
-      </ul>
+      </ul> -->
 
       <!-- Opciones a la derecha -->
       <div class="right-options">
@@ -31,11 +31,11 @@
     </header>
     <div class="cover">
       <figure>
-        <img src="img/home_background.jpg" alt="" />
+        <img src="img/cover-home.png">
         <figcaption>
-          <h2 class="title">Conoce</h2>
-          <h2 class="subtitle">Baños de Agua Santa</h2>
-        </figcaption>
+          <h2 >Conoce</h2>
+          <h3 >Baños de Agua Santa</h3>
+          </figcaption>
       </figure>
     </div>
     <section class="hero">
