--- a/admin.html
+++ b/admin.html
@@ -11,7 +11,7 @@
       <!-- HEADER -->
       <ul class="header">
         <li>
-          <img src="/img/Icono.png" alt="" class="logo" />
+          <img src="/img/logo.png" alt="" class="logo" />
         </li>
         <li>
           <a href="/signin.html" id="signout-ancle">Salir</a>
