--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header">
       <!-- Logo -->
       <div class="logo">
-        <img src="img/logo.png" alt="Logo" />
+        <img src="./img/logo.png" alt="Logo" />
       </div>
 
       <!-- Menú central -->
